--- a/index3.html
+++ b/index3.html
@@ -24,10 +24,16 @@
                     <label for="date" class="form-label">Date d'anniversaire</label>
                     <input type="text" class="form-control" id="date" />
                 </div>
+
                 <div class="mb-3">
-                    <label for="prenom" class="form-label">Nom de la personne</label>
+                    <label for="color" class="form-label">Nom de la personne</label>
                     <input type="text" class="form-control" id="prenom" />
                 </div>
+                <div class="mb-3">
+                    <label for="prenom" class="form-label">Couleur du prenom</label>
+                    <input type="color" class="form-control w-25" id="color" />
+                </div>
+
                 <button type="submit" class="btn btn-primary">Envoyer</button>
                 <button type="button" class="btn btn-warning">Annuler</button>
             </form>
